<resources>
    <string name="app_name">Dubb Fire</string>
    <string name="title_activity_maps">Map</string>
    <string name="drawer_open">Open Navigation drawer</string>
    <string name="drawer_close">Close Navigation drawer</string>
    <string name="emergency">แจ้งเหตุไฟป่า</string>

    <string name="channel_name">Fire Alert</string>
    <string name="channel_description">Find new fire forest location.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="kml_url">http://tatam.esy.es/ffmc_2.kml</string>

    <string name="subscribe_to_news">subscribe to news</string>
    <string name="unsubscribe_to_news">unsubscribe to news</string>
    <string name="log_token">log token</string>

    <string name="facebook_app_id">293960094461394</string>
    <string name="fb_login_protocol_scheme">fb293960094461394</string>

    <string name="login_logout">บัญชี</string>
    <string name="about">เกี่ยวกับเรา</string>
    <string name="st_wilds">สถานีควบคุมไฟป่า</string>
    <string name="st_forest">หน่วยส่งเสริมการควบคุมไฟป่า</string>
    <string name="station">ศูนย์ควบคุมไฟป่า</string>
    <string name="home">หน้าแรก</string>
    <string name="moreinfo">ข้อมูลเพิ่มเติม</string>
    <string name="satellite">ดาวเทียม</string>
    <string name="todo">TODO</string>
    <string name="terra">Terra</string>
    <string name="aqua">Aqua</string>
    <string name="suomi">Suomi NPP</string>
    <string name="ffmc">ค่าความชื้นเชื้อเพลิง(FFMC)</string>
    <string name="fwi">ค่าความรุนแรงไฟ(FWI)</string>
    <string name="pm10">ค่าฝุ่นละอองในอากาศ(PM10)</string>
    <string name="aboutus">แอปพลิเคชัน Dubb Fire (ดับไฟ) จัดทำโดย นิสิตภาควิชาคณิตศาสตร์และวิทยาการคอมพิวเตอร์ คณะวิทยาศาสตร์ จุฬาลงกรณ์มหาวิทยาลัย\n\tโดยมีวัตถุประสงค์เพื่อเป็นเครื่องมือช่วยบริหารจัดการไฟป่าให้กับเจ้าหน้าที่ศูนย์ควบคุมไฟป่าภายในพื้นที่ภาคเหนือของประเทศไทย และมีฟังก์ชันเสริมคือ โทรแจ้งเหตุไฟป่าสำหรับบุคคลทั่วไป เพื่อเสริมประสิทธิภาพให้กับแอปพลิเคชัน\nทีมผู้พัฒนา\n\t1. นายภาสกร จุ้ยเปี่ยม\n\t2. นางสาวศิรประภา บุญรัตน์\nอาจารย์ที่ปรึกษา\tดร.อาธร เหลืองสดใส\nที่ปรึกษาพิเศษ\tดร.วีรชัย ตันพิพัฒน์\tนักวิจัยจาก หน่วยวิจัยเชี่ยวชาญเฉพาะทางด้านไฟป่าภูมิภาคอาเซียนตอนบน (Upper ASEAN Wildland Fire Special Research Unit) ศูนย์วิจัยป่าไม้ คณะวนศาสตร์ ม.เกษตรศาสตร์.</string>
    <string name="history">สถิติย้อนหลัง</string>
    <string name="stat_title">สถิติการเกิดไฟป่าในปี</string>
    <string name="ok">OK</string>
    <string name="select_year">SELECT YEAR</string>
    <string name="total">ทั้งหมด</string>

</resources>