<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<group android:checkableBehavior="all">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@mipmap/ic_home_black_24dp" />

    <item android:title="@string/kmz">
        <menu>
            <group >
                <item
                    android:id="@+id/ffmc"
                    android:title="FFMC" />
                <item
                    android:id="@+id/fwi"
                    android:title="FWI"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/station">
        <menu>
            <group >
                <item
                    android:id="@+id/st_forest"
                    android:title="@string/st_forest"/>
                <item
                    android:id="@+id/st_wilds"
                    android:title="@string/st_wilds"/>
            </group>
        </menu>
    </item>
</group>
    <item android:title="">
        <menu>
            <group >
                <item
                    android:id="@+id/call"
                    android:title="@string/emergency"
                    android:enabled="false"/>
                <item
                    android:id="@+id/about"
                    android:title="@string/about" />
            </group>
        </menu>
    </item>

</menu>